# jcli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
benchmarks/: parse_results.py  payloads.py  real_world_test.sh  report.py  targeted_test.sh  test_token_efficiency.py  token_counter.py
benchmarks/sample_data/: config_diff.txt  device_facts.json  load_result.txt  router_list.txt  show_bgp_summary.txt  show_config.txt  show_interfaces.txt  show_interfaces_drops.txt  system_services.txt
docs/: benchmark.md  benchmark_results.md
examples/: block.cfg  block.cmd
skills/: SKILL.md
src/jcli/cli/: main.py
src/jcli/cli/commands/: command.py  config.py  device.py
src/jcli/device/: config.py  config_ops.py  connection.py  inventory.py
src/jcli/output/: formatter.py
src/jcli/safety/: blocklist.py
src/jcli/template/: renderer.py
tests/: conftest.py  test_blocklist.py  test_cli.py  test_config.py  test_formatter.py  test_inventory.py  test_renderer.py
